--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,6 +14,8 @@
         padding: 0;
       }
     </style>
+    <script data-goatcounter="https://fydun.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
   </head>
   <body>
     <div id="root"></div>
